# FastAPI-Intro

./: README.md  pyproject.toml
Bruno/FastAPI_Exercicio/: 1 Adicionar tarefas.bru  1 Ler tarefa.bru  2 Retorna: toda ou lista reduzida de tarefas.bru  3 Edita tarefas.bru  4 Deletar tarefas.bru  bruno.json
app/: main.py
