[tool.poetry]
name = "fastapi-exercicio"
version = "0.1.0"
description = ""
authors = ["LivMad <livia.o.dantas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
ruff = {extras = ["all"], version = "^0.3.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
